fixed html issues

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <article>
-      <img class="image" src="./images/drawers.jpg" alt="Drawers" srcset="" />
+      <img class="image" src="./images/drawers.jpg" alt="Drawers" />
       <div class="details">
         <h3>
           Shift the overall look and feel by adding these wonderful touches to
@@ -38,12 +38,7 @@
           </div>
 
           <div onclick="share()" class="share-btn">
-            <img
-              src="./images/icon-share.svg"
-              alt="Share"
-              id="share-ico"
-              srcset=""
-            />
+            <img src="./images/icon-share.svg" alt="Share" id="share-ico" />
             <div class="tooltip">
               <div>Share</div>
               <div class="ico">
